# openenclave

./: CHANGELOG.md
cmake/: add_enclave.cmake  add_enclave_test.cmake
common/sgx/: qeidentity.c  revocation.c  sgxcertextensions.c
enclave/: CMakeLists.txt
host/crypto/openssl/: cert.c  ec.c
host/sgx/: create.c  elf.c  load.c  loadelf.c  loadpe.c  sgxload.c  sgxquoteprovider.c
tests/VectorException/host/: host.c
tests/abortStatus/enc/: CMakeLists.txt
tests/backtrace/enc/: CMakeLists.txt
tests/create-errors/enc/: CMakeLists.txt
tests/crypto/enclave/enc/: CMakeLists.txt
tests/crypto_crls_cert_chains/enc/: CMakeLists.txt
tests/debug-mode/: CMakeLists.txt
tests/debug-mode/enc/: CMakeLists.txt
tests/libc/: CMakeLists.txt
tests/libcxx/: CMakeLists.txt
tests/libunwind/host/: host.cpp
tests/oeedger8r/host/: CMakeLists.txt
tests/print/: CMakeLists.txt
tests/props/: CMakeLists.txt
tests/qeidentity/enc/: CMakeLists.txt
tests/report/common/: tests.cpp
tests/report/enc/: CMakeLists.txt  enc.cpp
tests/report/host/: CMakeLists.txt  host.cpp
tests/sealKey/enc/: CMakeLists.txt
tests/stdc/enc/: CMakeLists.txt
tests/stdcxx/: CMakeLists.txt
tests/thread/: CMakeLists.txt
tests/thread/oethread_enc/: CMakeLists.txt
tests/thread/pthread_enc/: CMakeLists.txt
tests/threadcxx/enc/: CMakeLists.txt
tools/oesign/: main.c
